# alfred-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yaml  compose.yml  deny.toml  justfile
database/: Cargo.toml
database/migrations/: 20250714153836_users_table.up.sql
database/src/: users.rs
migrations/: 20251211120058_create_users_table.down.sql  20251211120058_create_users_table.up.sql
pgdb/: Cargo.toml
pgdb/migrations/: 20251208123639_create_users_table.down.sql  20251208123639_create_users_table.up.sql
pgdb/queries/users/: create.sql
pgdb/src/: error.rs
pgdb/src/users/: create.rs  mod.rs
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
proto/users/v1/: users.proto
server/: Cargo.toml
server/src/: auth.rs  main.rs  users.rs
shared/: Cargo.toml
shared/src/models/: mod.rs  user.rs
src/: crypto.rs  error.rs  lib.rs  logger.rs  main.rs  settings.rs
src/models/: mod.rs  user.rs
src/server/: middleware.rs  mod.rs
src/server/routes/: mod.rs  public.rs  users.rs
src/services/: mod.rs  users_service.rs
src/storage/: mod.rs  pg_storage.rs
src/storage/users/: mod.rs  pg_users_repository.rs
surdb/: Cargo.toml
surdb/src/: lib.rs
surdb/src/users/: mod.rs
telegram/: Cargo.toml
telegram/src/: callbacks.rs  main.rs  users_client.rs
telegram/src/keyboards/: admin.rs  employee.rs  guest.rs  mod.rs
telegram/src/router/: commands.rs  mod.rs
telegram/src/router/callbacks/: admin.rs  mod.rs  news.rs  products.rs
telegram/src/router/messages/: admin.rs  mod.rs  news.rs  products.rs
