[workspace]
resolver = "3"
members = ["shared", "surdb"]

[license]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
