[package]
name = "alfred-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
name = "alfred"

[[bin]]
name = "alfred"
path = "src/main.rs"

[dependencies]
# async
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"

# database
surrealdb = "2.4.0"

# config
config = "0.15.19"

# logging
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

# error handling
thiserror = "2.0.17"

# server
axum = "0.8.7"
tower-http = { version = "0.6.8", features = ["trace", "timeout", "cors"] }

# requests
reqwest = { version = "0.12.25", features = ["gzip", "json", "cookies"] }

# email
imap = "3.0.0-alpha.15"
mail-parser = "0.11.1"

# parsing
calamine = "0.32.0"
tl = "0.7.8"
regex = "1.12.2"

# serde
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

# utils
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde"] }
derive_builder = "0.20.2"
http = "1.4.0"
bytes = "1.11.0"
