[package]
name = "alfred-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
name = "alfred"

[[bin]]
name = "alfred"
path = "src/main.rs"

[dependencies]
# async
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"

# database
sqlx = { version = "0.8.6", default-features = false, features = [
	"postgres",
	"runtime-tokio",
	"tls-rustls",
	"macros",
	"migrate",
	"chrono",
	"uuid",
] }

# config
config = "0.15.19"

# logging
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

# error handling
thiserror = "2.0.17"

# server
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tower-http = { version = "0.6.8", features = [
	"trace",
	"timeout",
	"cors",
	"catch-panic",
	"request-id",
	"compression-gzip",
] }
tower = "0.5.2"

# requests
reqwest = { version = "0.12.25", features = ["gzip", "json", "cookies"] }

# email
imap = "3.0.0-alpha.15"
mail-parser = "0.11.1"

# parsing
calamine = "0.32.0"
tl = "0.7.8"
regex = "1.12.2"

# serde
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

# crypto
argon2 = "0.5.3"

# utils
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
derive_builder = "0.20.2"
http = "1.4.0"
bytes = "1.11.0"
log = "0.4.29"
validator = { version = "0.20.0", features = ["derive"] }
time = "0.3.44"
