[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tonic-reflection = { git = "https://github.com/hyperium/tonic", features = ["server"] }
proto = { path = "../proto" }
database = { path = "../database" }
tracing-subscriber.workspace = true
tracing.workspace = true