[package]
name = "telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
teloxide = { version = "0.17", features = ["macros"] }
proto = { path = "../proto" }
tonic.workspace = true
shared = { path = "../shared" }
